--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   <!-- 預加載關鍵資源 -->
   <link rel="preload" href="https://fonts.googleapis.com/icon?family=Material+Icons" as="style">
-  <link rel="preload" href="https://i.imgur.com/Bi3flyJ.jpg" as="image" crossorigin="anonymous">
+  <link rel="preload" href="https://i.imgur.com/Fjw7Nik.png" as="image" crossorigin="anonymous">
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400&display=swap" as="style">
   
   <!-- 添加 jQuery UI Datetimepicker 資源 -->
@@ -17,8 +17,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-ui-timepicker-addon/1.6.3/jquery-ui-timepicker-addon.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-ui-timepicker-addon/1.6.3/jquery-ui-timepicker-addon.min.css">
   
-  <link rel="icon" type="image/png" sizes="32x32" href="https://i.imgur.com/Bi3flyJ.jpg">
-  <link rel="apple-touch-icon" href="https://i.imgur.com/Bi3flyJ.jpg">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://i.imgur.com/Fjw7Nik.png">
+  <link rel="apple-touch-icon" href="https://i.imgur.com/Fjw7Nik.png">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400&display=swap">
   
@@ -1280,8 +1280,8 @@
 <body>
   <div id="networkStatus" class="network-status network-online">已連線</div>
   <div class="container">
-    <img class="logo" src="https://i.imgur.com/Bi3flyJ.jpg" alt="Logo" crossorigin="anonymous">
-    <h1>AB_Office_ANN</h1>
+    <img class="logo" src="https://i.imgur.com/Fjw7Nik.png" alt="Logo" crossorigin="anonymous">
+    <h1>WT_Office_ANN</h1>
     <h2>請鍵入身分證後四碼執行打卡</h2>
     <div id="safariNotice" class="browser-notice">
       <p>若遇到打卡問題｜請截圖回報營運組</p>
@@ -2026,7 +2026,7 @@
   /**
    * @constant {string} WEB_APP_URL - 部署網址 (GAS)
    */
-  const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbzzQNnB9mV2ecKJF4TMLUZHBudB4QLa25QJeS39XJrigti4mDBvWaBS7Gvm5bgnjh93/exec";
+  const WEB_APP_URL = "https://script.google.com/macros/s/AKfycby_9n9Rz-teb7P6oEY6IMy3LopnNq5HSGwAwnTryEVzzWNskcQTIWhRwCNiUkod1o4/exec";
 
   /**
    * @constant {Object} CONFIG
