--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   <!-- 預加載關鍵資源 -->
   <link rel="preload" href="https://fonts.googleapis.com/icon?family=Material+Icons" as="style">
-  <link rel="preload" href="https://i.imgur.com/3wyDM73.png" as="image" crossorigin="anonymous">
+  <link rel="preload" href="https://i.imgur.com/CtRf4yQ.png" as="image" crossorigin="anonymous">
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400&display=swap" as="style">
   
   <!-- 添加 jQuery UI Datetimepicker 資源 -->
@@ -17,8 +17,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-ui-timepicker-addon/1.6.3/jquery-ui-timepicker-addon.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-ui-timepicker-addon/1.6.3/jquery-ui-timepicker-addon.min.css">
   
-  <link rel="icon" type="image/png" sizes="32x32" href="https://i.imgur.com/3wyDM73.png">
-  <link rel="apple-touch-icon" href="https://i.imgur.com/3wyDM73.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://i.imgur.com/CtRf4yQ.png">
+  <link rel="apple-touch-icon" href="https://i.imgur.com/CtRf4yQ.png">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400&display=swap">
   
@@ -1280,7 +1280,7 @@
 <body>
   <div id="networkStatus" class="network-status network-online">已連線</div>
   <div class="container">
-    <img class="logo" src="https://i.imgur.com/3wyDM73.png" alt="Logo" crossorigin="anonymous">
+    <img class="logo" src="https://i.imgur.com/CtRf4yQ.png" alt="Logo" crossorigin="anonymous">
     <h1>WT_Office_ANN</h1>
     <h2>請鍵入身分證後四碼執行打卡</h2>
     <div id="safariNotice" class="browser-notice">
